--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,8 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "modules": false,
-        "targets": {
-          "esmodules": true
-        }
-      }
-    ]
-  ],
-  "plugins": [
-    "transform-dynamic-import"
-  ]
+  "presets": [["@babel/preset-env", {
+    "modules": false,
+    "targets": {
+      "esmodules": true
+    }
+  }]]
 }
